--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -2,7 +2,9 @@
     #parent{
         flex-direction: column;
     }
-   
+   #child1 {
+    width: 100%;
+   }
     #child2 img{
         height: 70px;
         width: 70px;
@@ -12,46 +14,74 @@
      gap: 2rem;
     }
 }
-@media screen and (min-width:440px) and (max-width:720px) {
-    
+@media screen and (min-width:440px) and (max-width:660px) {
+    child1{
+        width: 50%;
+    }
     #child2 img{
-        height: 70px;
-        width: 70px;
-    }
-    #child2{
-     gap: 1rem;
-    }
-}
-
-@media screen and (min-width:720px) and (max-width:990px) {
-        #child2 img{
         height: 100px;
         width: 100px;
     }
     #child2{
-     gap: 1.5rem;
+        width: 50%;
+     gap: 1rem;
     }
 }
 
-@media screen and (min-width:990px) and (max-width:1280px) {
-   
-    #child2 img{
-        height: 120px;
-        width: 120px;
+@media screen and (min-width:660px) and (max-width:875px) {
+    #child1{
+        width: 50%;
     }
-   
-    
+        #child2 img{
+        height: 130px;
+        width: 130px;
+    }
+    #child2{
+        width: 50%;
+     gap: 2.5rem;
+    }
 }
-@media screen and (min-width:1280px) and (max-width:1440px) {
-    
+
+@media screen and (min-width:875px) and (max-width:1000px) {
+   
     #child2 img{
         height: 150px;
         width: 150px;
     }
+   
+    
+}
+@media screen and (min-width:1000px) and (max-width:1258px) {
+    #child1{
+        width: 50%;
+    }
+    #child2 img{
+        height: 200px;
+        width: 200px;
+    }
     #child2{
         padding: 10px;
         gap: 5rem;
+        width: 50%;
+
     }
     
 }
 
+
+@media screen and (min-width:1259px) and (max-width:1440px) {
+    #child1{
+        width: 50%;
+    }
+    #child2 img{
+        height: 250px;
+        width: 250px;
+    }
+    #child2{
+        padding: 10px;
+        gap: 5rem;
+        width: 50%;
+
+    }
+    
+}
